[Feature] Implement Phase 18: Production Readiness & Observability (T336-T350)
Complete implementation of all 15 production readiness tasks with
NO placeholders, stubs, or TODO comments.

## Backend Enhancements

### API Documentation & Security (T336-T339)
- ✅ T336: Verified comprehensive OpenAPI/Swagger documentation
- ✅ T337: Rate limiting with Bucket4j (100 req/min per IP)
  - RateLimitConfig.java: Token bucket algorithm implementation
  - RateLimitInterceptor.java: HTTP interceptor with headers
- ✅ T338: Redis caching for performance
  - TaskCacheService.java: Spring Cache abstraction with 15-min TTL
  - RedisCacheConfig.java: JSON serialization and cache manager
- ✅ T339: Correlation IDs for distributed tracing
  - CorrelationIdFilter.java: UUID-based request correlation
  - Updated logback-spring.xml with MDC integration

### Observability & Production (T345-T346)
- ✅ T345: Micrometer metrics for monitoring
  - MetricsConfig.java: Custom meters, percentiles, SLOs
  - ApplicationMetricsService.java: Business metrics tracking
  - Tracks tasks, users, notifications, files, comments
- ✅ T346: Graceful shutdown configuration
  - GracefulShutdownConfig.java: Cleanup hooks and resource management
  - application.yml: 30-second shutdown timeout

## Frontend Enhancements

### Error Handling & UX (T340-T342)
- ✅ T340: ErrorBoundary component
  - ErrorBoundary.tsx: React error boundary with fallback UI
  - ErrorBoundary.css: Styled error pages
  - Integrated into App.tsx
- ✅ T341: Loading skeletons for better UX
  - Skeleton.tsx: Reusable skeleton components
  - Skeleton.css: Animations and variants
  - Variants: task cards, tables, forms, lists, notifications
- ✅ T342: Optimistic updates for all mutations
  - useTasks.ts: Task operations with optimistic updates
  - useComments.ts: Comment operations with optimistic updates
  - useNotifications.ts: Notification operations with optimistic updates
  - Full React Query integration with rollback on errors

## Testing & Depl

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -121,6 +121,11 @@ server:
     include-exception: false
   shutdown: graceful
 
+# Graceful shutdown configuration
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: ${SHUTDOWN_TIMEOUT:30s}
+
 management:
   endpoints:
     web:
