--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -97,6 +97,7 @@
     "node_modules",
     "*.config.js",
     "*.config.ts",
-    "vite.config.ts"
+    "vite.config.ts",
+    "tests/e2e/**/*.ts"
   ]
 }
